2004-03-01  Nathan Hurst <njh@mail.csse.monash.edu.au>

	* src/draw-context.cpp: Fixed edge case in freehand tool.  Added
	comment about curve fitting.

2004-03-01  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/interface.h, src/interface.cpp
	(sp_ui_new_view, sp_ui_new_view_preview): Make static.

	* src/dyna-draw-context.cpp (sp_ddc_defaults):
	Cleanup: Use table and loop instead of copy&paste.

	* configure.in: If -Wno-unused-parameter isn't recognized (g++ 3.2 and
	earlier) then use -Wno-unused.

	* src/libnr/nr-point.h: NR::Point: Add explicit copy constructor and
	operator= in the hope of fixing #907059.

	* src/desktop-events.cpp (sp_dt_ruler_event): NR::Point'ification.

	* src/selection.cpp (sp_selection_item_selected):
	* src/seltrans.cpp (sp_sel_trans_stretch_request):
	* src/display/nr-arena-shape.cpp (shape_run_A8_OR):
	* src/livarot/PathStroke.cpp (DoJoin):
	* src/livarot/ShapeMisc.cpp (ReFormeBezierTo):
	Address compiler warnings.

2004-02-28  Jon Phillips <jon@protofunk.org>

	* share/*: Move extensions, icons, and made a new folder screens
	for screens that are pulled up in using inkscape.  Please test
	this heavily as it implements the most troublesome chunks of the
	directory reorganization.

	* Makefile.am, Makefile.mingw, config.h.mingw, configure.in:
	Changed to coincide with the new changes.

2004-02-28  Nathan Hurst <njh@mail.csse.monash.edu.au>

	* src/nodepath.cpp,h: Moved radial to class Radial.  Moved
	NodePath into namespace Path and partially classified.

2004-02-28  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/nodepath.cpp: Mark several functions as static.

	* src/dialogs/stroke-style.cpp: Rename DEBUG_MARKERS ifdef to
	WITH_MARKER_GUI, and make more things conditional on it.
	(Fixes failing assertion for the !defined case.)

2004-02-27  Alexander Clausen <alex@skip86.com>

	* src/desktop-events.cpp: fix my last fix *sigh*

	* src/inkview.cpp: fix inkview crash when none of the files 